# spekispace

./: .firebaserc  .gitignore  .rustfmt.toml  Cargo.toml  LLM_CARD_CREATION_GUIDE.md  README.md  best_practices  firebase.json  flake.nix  glossary.md  run_services.sh  serve  speki.code-workspace  todo
.github/: copilot-instructions.md
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  release.yml
fsload/: Cargo.toml
fsload/src/: lib.rs
ledger_macros/: Cargo.toml
ledgerstore/: Cargo.toml  bench
ledgerstore/src/: blockchain.rs  cache.rs  entry_thing.rs  item.rs  ledger_cache.rs  ledger_item.rs  lib.rs  local.rs  node.rs  read_ledger.rs  remote.rs  staging.rs  write_ledger.rs
omtrent/: Cargo.toml
omtrent/src/: lib.rs
samsvar/: Cargo.toml
samsvar/src/: lib.rs
simpletime/: Cargo.toml
simpletime/src/: lib.rs
snapstore/: Cargo.toml
snapstore/src/: fs.rs  lib.rs  mem.rs
snapstore/tests/: basic.rs
speki/: Cargo.toml  Dioxus.toml  debug  env_debug  input.css  package.json  serve  tailwind.config.js
speki-auth/: Cargo.toml
speki-auth/src/: main.rs  other.rs
speki-cli/: .gitignore  Cargo.toml  README.md  todo
speki-cli/src/: add_cards.rs  collections.rs  incread.rs  main.rs  review.rs  unfinished.rs  utils.rs
speki-core/: Cargo.toml
speki-core/src/: attribute.rs  audio.rs  cache.rs  card_provider.rs  cardfilter.rs  categories.rs  collection.rs  collections.rs  common.rs  config.rs  dependents.rs  github.rs  healthcheck.rs  index.rs  ledger.rs  lib.rs  metadata.rs  paths.rs  recall_rate.rs  reviews.rs  set.rs
speki-core/src/card/: back_side.rs  basecard.rs  card_types.rs  mod.rs  serializing.rs
speki-core/src/recall_rate/: ml.rs  mod.rs
speki-core/src/recall_rate/ml/: classic.rs  mod.rs
speki-dto/: Cargo.toml
speki-dto/src/: lazyitem.rs  lib.rs
speki-fs/: Cargo.toml
speki-fs/src/: lib.rs
speki-idb/: Cargo.toml  utils.js
speki-idb/src/: js.rs  lib.rs
speki-provider/: Cargo.toml  dexie.js  firestore.js
speki-provider/src/: browserfs.rs  dexie.rs  fs.rs  lib.rs
speki-provider/src/browserfs/: js.rs  mod.rs
speki-provider/src/dexie/: js.rs  mod.rs
speki-provider/src/firestore/: mod.rs
speki-provider/src/fs/: mod.rs  paths.rs
speki-proxy/: Cargo.toml
speki-proxy/src/: main.rs
speki-top/: Cargo.toml  Dioxus.toml
speki-web/: .rustfmt.toml  Cargo.toml  Dioxus.toml  index.html  package-lock.json  package.json  release.sh  serve  tailwind  tailwind.config.js
speki-web/.firebase/: hosting.ZGlzdA.cache  hosting.eHh4.cache
speki-web/assets/: cyto.js  firebase.js  git.js  manifest.json  textcalc.js  utils.js
speki-web/public/: cloneRepo.js  hello.js  tailwind.css
speki-web/publish/: index.html
speki-web/publish/assets/: firebase.js  git.js  tailwind-7fe95d6e1f278973.css
speki-web/publish/wasm/: package.json.br  speki-web.js
speki-web/publish/wasm/snippets/dioxus-interpreter-js-4f3bdb922bc47527/: inline0.js
speki-web/publish/wasm/snippets/speki-provider-b7eee617698ec2c8/: browserfs.js  browserfs.js.br
speki-web/publish/wasm/snippets/speki-web-3cfa4359ae5b0fa3/assets/: cyto.js.br
speki-web/src/: another_provider.rs  firebase.rs  github.rs  graph.rs  js.rs  lib.rs  login.rs  main.rs  nav.rs  provider.rs  review_state.rs  utils.rs
speki-web/src/components/: audioupload.rs  backside.rs  card_selector.rs  cardref.rs  display_card.rs  dropdown.rs  filtereditor.rs  frontside.rs  graph.rs  mod.rs
speki-web/src/components/graph/: digraph.rs  js.rs  mod.rs
speki-web/src/overlays/: card_selector.rs  cardviewer.rs  colviewer.rs  itemselector.rs  mod.rs  reviewsession.rs  textinput.rs  uploader.rs  yesno.rs
speki-web/src/pages/: about.rs  add_card.rs  browse.rs  collections.rs  debug.rs  home.rs  import.rs  mod.rs  review.rs  upload.rs  view.rs
speki-web/src/pages/add_card/: backside.rs  frontside.rs  mod.rs
speki-web/src/pages/review/: mod.rs  review_state.rs
speki/assets/: firebase.js  sw.js
speki/public/: tailwind.css
speki/publish/assets/: cyto.js
speki/publish/wasm/: package.json  speki-web.js.br  speki-web_bg.wasm  speki-web_bg.wasm.br
speki/publish/wasm/snippets/dioxus-interpreter-js-4f3bdb922bc47527/: inline0.js.br
speki/publish/wasm/snippets/speki-provider-b7eee617698ec2c8/: dexie.js.br
speki/publish/wasm/snippets/speki-web-3cfa4359ae5b0fa3/assets/: cyto.js  firebase.js.br
speki/src/: firebase.rs  lib.rs  main.rs  nav.rs  utils.rs
speki/src/components/: backside.rs  card_data.rs  card_mastery.rs  cardref.rs  delete_button.rs  dropdown.rs  filtereditor.rs  frontside.rs  mod.rs  toggle.rs
speki/src/overlays/: card_selector.rs  cardviewer.rs  itemselector.rs  mod.rs  notice.rs  reviewsession.rs  textinput.rs  uploader.rs
speki/src/overlays/cardviewer/: attributes.rs  cardeditor.rs  metadata.rs  mod.rs
speki/src/pages/: add_card.rs  browse.rs  import.rs  mod.rs  review.rs
timestamped/src/: lib.rs
