[workspace]
members = ["speki-core", "omtrent", "speki-web", "snapstore", "ledgerstore", "simpletime", "ledger_macros"]

resolver = "2"

[workspace.dependencies]
speki-core = { path = "speki-core" }
omtrent = { path = "omtrent" }
snapstore = { path = "snapstore" }
ledgerstore = { path = "ledgerstore" }
simpletime = { path = "simpletime" }
either = "1.15.0"
tokio = { version = "1", features = ["fs", "rt-multi-thread"] }
async-openai = "0.28.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
toml = "0.8.19"
futures = "0.3"
eyre = "0.6.12"
rayon = "1.10.0"
log = "0.4.22"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = "0.3.18"
dioxus-logger = "0.6.1"
wasm-bindgen = "0.2.95"
gloo-utils = "0.2.0"
js-sys = "0.3.72"
walkdir = "2.5.0"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = [
    "Element",
    "Screen",
    "HtmlAudioElement",
    "Url",
    "Blob",
    "BlobPropertyBag",
    "HtmlAnchorElement",
    "Window",
    "Document",
] }
async-trait = "0.1.83"
chrono = "0.4.38"
petgraph = "0.6.5"
once_cell = "1.20.2"
strum = { version = "0.24", features = ["derive"] }
fancy-regex = "0.14.0"
async-recursion = "1.1.1"
futures-util = "0.3"
dirs = "5.0.1"
gloo = "0.3"
async-once-cell = "0.5.4"
nonempty = "0.11.0"
bincode = "1.3.3"
rand = "0.8"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
