[workspace]
members = ["speki-core", "omtrent", "speki", "ledgerstore"]

resolver = "2"

[workspace.dependencies]
speki-core = { path = "speki-core" }
omtrent = { path = "omtrent" }
ledgerstore = { path = "ledgerstore" }
either = "1.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
toml = "0.8.19"
futures = "0.3"
rayon = {version = "1.10.0" }
log = "0.4.22"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = "0.3.18"
dioxus-logger = "0.6.1"
walkdir = "2.5.0"
chrono = "0.4.38"
petgraph = "0.6.5"
once_cell = "1.20.2"
strum = { version = "0.24", features = ["derive"] }
fancy-regex = "0.14.0"
futures-util = "0.3"
dirs = "5.0.1"
nonempty = "0.11.0"
rand = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dioxus = { version = "0.6.1", features = ["router"] } 
deunicode = "1.6.0"
git2 = "0.20.2"
dioxus-desktop = "0.6.1"
clap = { version = "4.5.43", features = ["derive"] }
rfd = "0.15.4"
semver = "1.0.26"
ureq = "2"
textplots = "0.8.7"
simpletime = "0.1.0"
sha2 = "0.10.8"
indexmap = "2"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
