[package]
name = "filecash"
version = "0.1.1"
edition = "2021"
description = "Easy loading, saving, and caching using just your filesystem"
license = "GPL-3.0"  
categories = ["filesystem"]  


[dependencies]
dirs = "5.0.1"
rayon = "1.10.0"
sanitize-filename = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
toml = "0.8.19"
uuid = { version = "1.11.0", features = ["serde"] }
walkdir = "2.5.0"
