[package]
name = "ledgerstore"
version = "0.1.0"
edition = "2024"
authors = ["tor torberge@outlook.com"]
description = "ledger based database"
license = "GPL-2.0-only"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
async-trait.workspace = true
toml.workspace = true
tracing.workspace = true
futures.workspace = true
nonempty.workspace = true
async-once-cell.workspace = true
wasm-bindgen-futures.workspace = true
bincode.workspace = true
snapstore.workspace = true
walkdir.workspace = true
rayon.workspace = true
simpletime.workspace = true
either.workspace = true
