[package]
name = "ledgerstore"
version = "0.1.0"
edition = "2021"
authors = ["tor torberge@outlook.com"]
description = "ledger based database"
license = "GPL-2.0-only"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
toml.workspace = true
tracing.workspace = true
futures.workspace = true
nonempty.workspace = true
walkdir.workspace = true
rayon.workspace = true
either.workspace = true
