[package]
name = "ledgerstore"
version = "0.1.2"
edition = "2021"
authors = ["tor torberge@outlook.com"]
description = "ledger based database"
license = "GPL-2.0-only"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
walkdir.workspace = true
either.workspace = true
git2.workspace = true
chrono.workspace = true
ureq.workspace = true
semver.workspace = true
