[package]
name = "samsvar"
version = "0.1.2"
edition = "2021"
authors = ["tor torberge@outlook.com"]
description = "trait for matching on custom types"
license = "GPL-2.0-only"

[dependencies]
serde_json = "1.0.128"
nom = "7.0"
async-trait = "0.1.83"
tracing.workspace = true

[dev-dependencies]
tokio = { version = "1.41.1", features = ["full"] }
