[package]
name = "samsvar"
version = "0.1.2"
edition = "2021"
authors = ["tor torberge@outlook.com"]
description = "trait for matching on custom types"
license = "GPL-2.0-only"

[dependencies]
serde_json.workspace = true
nom.workspace = true
async-trait.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
