[package]
name = "snapstore"
version = "0.1.1"
edition = "2024"
authors = ["tor torberge@outlook.com"]
description = "snapshot based database"
license = "GPL-2.0-only"

[dependencies]
walkdir.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
simpletime.workspace = true
rayon.workspace = true

[dev-dependencies]
uuid = "1.16.0"
ledgerstore.workspace = true
