[package]
name = "snapstore"
version = "0.1.2"
edition = "2021"
authors = ["tor torberge@outlook.com"]
description = "snapshot based database"
license = "GPL-2.0-only"

[dependencies]
walkdir.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true

[dev-dependencies]
uuid = "1.16.0"
ledgerstore.workspace = true
