[package]
name = "speki-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
oauth2 = "4.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json.workspace = true
jsonwebtoken = "9.3.0"
chrono = "0.4.38"

