[package]
name = "speki-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum-extra.workspace = true
axum.workspace = true
oauth2.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
tower-http.workspace = true
log.workspace = true
