[package]
name = "speki-cli"
version = "0.1.5"
edition = "2021"
authors = ["tor torberge@outlook.com"]
description = "cli version of speki"
license = "GPL-2.0-only"


[dependencies]
clap.workspace = true
skim.workspace = true
strum.workspace = true
strum_macros.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
enumselector.workspace = true
dialoguer.workspace = true
opener.workspace = true
console.workspace = true
tokio.workspace = true
cli-justify.workspace = true
cli-pdf-to-text.workspace = true
cli-epub-to-text.workspace = true
wikipedia.workspace = true
rand.workspace = true
speki-core.workspace = true
