[package]
name = "speki-core"
version = "0.1.10"
edition = "2021"
authors = ["tor torberge@outlook.com"]
description = "core functionality of speki"
license = "GPL-2.0-only"


[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true
futures.workspace = true
eyre.workspace = true
omtrent.workspace = true
speki-dto.workspace = true
dioxus-logger.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

async-trait.workspace = true

[dependencies.gkquad]
version = "0.0.4"
default-features = false
#features = ["single"]


[dev-dependencies]
tokio.workspace = true
