[package]
name = "speki-core"
version = "0.1.10"
edition = "2021"
authors = ["tor torberge@outlook.com"]
description = "core functionality of speki"
license = "GPL-2.0-only"


[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true
futures.workspace = true
eyre.workspace = true
omtrent.workspace = true
dioxus-logger.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-recursion.workspace = true
ledgerstore.workspace = true
async-once-cell.workspace = true
async-trait.workspace = true
wasm-bindgen-futures.workspace = true
deunicode = "1.6.0"
nonempty.workspace = true
fancy-regex.workspace = true
either.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }


[dependencies.gkquad]
version = "0.0.4"
default-features = false
