[package]
name = "speki-core"
version = "0.1.10"
edition = "2021"
authors = ["tor torberge@outlook.com"]
description = "core functionality of speki"
license = "GPL-2.0-only"


[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true
dioxus-logger.workspace = true
tracing.workspace = true
nonempty.workspace = true
fancy-regex.workspace = true
either.workspace = true
strum.workspace = true
deunicode.workspace = true
semver.workspace = true
textplots.workspace = true
dirs.workspace = true
rand.workspace = true
simpletime.workspace = true
indexmap.workspace = true
sha2.workspace = true


omtrent.workspace = true
#omtrent = "0.1.1"

ledgerstore.workspace = true
#ledgerstore = "0.1.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }


[dependencies.gkquad]
version = "0.0.4"
default-features = false
