[package]
name = "speki-dto"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
async-trait.workspace = true
toml.workspace = true
tracing.workspace = true
futures.workspace = true
nonempty.workspace = true
async-once-cell.workspace = true
wasm-bindgen-futures.workspace = true
