[package]
name = "speki-idb"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen.workspace = true
serde_json.workspace = true
gloo-utils.workspace = true
js-sys.workspace = true
toml.workspace = true
tracing.workspace = true
async-trait.workspace = true
speki-dto.workspace = true
wasm-bindgen-futures.workspace = true
time.workspace = true
