[package]
name = "speki-web"
version = "0.1.0"
authors = ["tor <tor.saebjornsen@cognite.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]

dioxus = { version = "0.6.1", features = ["web", "router"] }

dioxus-logger.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wasm-bindgen.workspace = true
futures.workspace = true
futures-util.workspace = true
gloo-utils.workspace = true
gloo.workspace = true
js-sys.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
serde_json.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
toml.workspace = true
async-trait.workspace = true
uuid.workspace = true
petgraph.workspace = true
once_cell.workspace = true
speki-provider = { workspace = true, features = ["dexie"] }
strum.workspace = true
fancy-regex.workspace = true
eyre.workspace = true
async-recursion.workspace = true


speki-dto = { path = "../speki-dto" }
speki-core = { path = "../speki-core" }
