[package]
name = "speki"
version = "0.1.0"
authors = ["tor <tor.saebjornsen@cognite.com>"]
edition = "2021"

[package.metadata.bundle]
name = "Speki"

[dependencies]

dioxus.workspace = true
dioxus-logger.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
strum.workspace = true
fancy-regex.workspace = true
speki-core = { path = "../speki-core" }
ledgerstore.workspace = true
either.workspace = true
nonempty.workspace = true
rand.workspace = true
omtrent.workspace = true
dirs.workspace = true
rayon.workspace = true
chrono.workspace = true
tokio.workspace = true

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
