[package]
name = "speki-app"
version = "0.1.0"
authors = ["tor <torberge@outlook.com>"]
edition = "2021"
description = "ontological flashcard app"
license = "GPL-3.0-or-later"

[package.metadata.bundle]
name = "Speki"

[dependencies]

dioxus.workspace = true
dioxus-logger.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
strum.workspace = true
fancy-regex.workspace = true
#speki-core = { path = "../speki-core" }
speki-core = "0.1.10"
ledgerstore = "0.1.2"
either.workspace = true
nonempty.workspace = true
rand.workspace = true
omtrent.workspace = true
dirs.workspace = true
rayon.workspace = true
chrono.workspace = true
tokio.workspace = true

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
