[package]
name = "speki"
version = "0.1.0"
authors = ["tor <torberge@outlook.com>"]
edition = "2021"
description = "ontological flashcard app"
license = "GPL-3.0-or-later"

[package.metadata.bundle]
name = "Speki"

[dependencies]

dioxus.workspace = true
dioxus-logger.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
strum.workspace = true
fancy-regex.workspace = true
either.workspace = true
nonempty.workspace = true
rand.workspace = true
dirs.workspace = true
rayon.workspace = true
chrono.workspace = true
tokio.workspace = true
clap.workspace = true
rfd.workspace = true
semver.workspace = true
simpletime.workspace = true
sha2.workspace = true
indexmap.workspace = true


ledgerstore.workspace = true

speki-core = { path = "../speki-core" }
#speki-core = "0.1.10"


omtrent.workspace = true
#omtrent = "0.1.1"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
